--- a/app/src/main/res/layout/list_divider.xml
+++ b/app/src/main/res/layout/list_divider.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
-
-    <View style="@style/ListDividerTopRow"/>
-
-    <View style="@style/ListDividerBottomRow"/>
-
-</LinearLayout>
+<View xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="2dp"
+    android:background="@color/primary_text" />
