--- a/app/src/main/res/layout/row_race.xml
+++ b/app/src/main/res/layout/row_race.xml
@@ -130,118 +130,115 @@
         </LinearLayout>
 
         <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="horizontal">-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal">-->
 
-            <!--<LinearLayout-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_weight="1"-->
-                <!--android:padding="8dp">-->
+        <!--<LinearLayout-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:padding="8dp">-->
 
 
-            <!--</LinearLayout>-->
+        <!--</LinearLayout>-->
 
-            <!--<LinearLayout-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_weight="1"-->
-                <!--android:padding="8dp"></LinearLayout>-->
+        <!--<LinearLayout-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:padding="8dp"></LinearLayout>-->
 
         <!--</LinearLayout>-->
 
 
         <!--<GridLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:columnCount="4"-->
-            <!--android:useDefaultMargins="true">-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:columnCount="4"-->
+        <!--android:useDefaultMargins="true">-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="0"-->
-                <!--android:layout_marginBottom="0dp"-->
-                <!--android:layout_marginRight="15dp"-->
-                <!--tools:text="FP1" />-->
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_marginBottom="0dp"-->
+        <!--android:layout_marginRight="15dp"-->
+        <!--tools:text="FP1" />-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="1"-->
-                <!--tools:text="Fri - 12:00" />-->
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="1"-->
+        <!--tools:text="Fri - 12:00" />-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="0"-->
-                <!--android:layout_marginBottom="0dp"-->
-                <!--android:layout_row="1"-->
-                <!--tools:text="FP1" />-->
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_marginBottom="0dp"-->
+        <!--android:layout_row="1"-->
+        <!--tools:text="FP1" />-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="1"-->
-                <!--android:layout_row="1"-->
-                <!--tools:text="Fri - 12:00" />-->
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="1"-->
+        <!--tools:text="Fri - 12:00" />-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="0"-->
-                <!--android:layout_marginBottom="0dp"-->
-                <!--android:layout_row="2"-->
-                <!--tools:text="FP1" />-->
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="0"-->
+        <!--android:layout_marginBottom="0dp"-->
+        <!--android:layout_row="2"-->
+        <!--tools:text="FP1" />-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="1"-->
-                <!--android:layout_row="2"-->
-                <!--tools:text="Fri - 12:00" />-->
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="1"-->
+        <!--android:layout_row="2"-->
+        <!--tools:text="Fri - 12:00" />-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="2"-->
-                <!--android:layout_marginBottom="0dp"-->
-                <!--android:layout_marginLeft="30dp"-->
-                <!--android:layout_row="0"-->
-                <!--tools:text="Q" />-->
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="2"-->
+        <!--android:layout_marginBottom="0dp"-->
+        <!--android:layout_marginLeft="30dp"-->
+        <!--android:layout_row="0"-->
+        <!--tools:text="Q" />-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="3"-->
-                <!--android:layout_row="0"-->
-                <!--tools:text="Fri - 12:00" />-->
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="3"-->
+        <!--android:layout_row="0"-->
+        <!--tools:text="Fri - 12:00" />-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="2"-->
-                <!--android:layout_marginBottom="0dp"-->
-                <!--android:layout_marginRight="15dp"-->
-                <!--android:layout_row="1"-->
-                <!--tools:text="R" />-->
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="2"-->
+        <!--android:layout_marginBottom="0dp"-->
+        <!--android:layout_marginRight="15dp"-->
+        <!--android:layout_row="1"-->
+        <!--tools:text="R" />-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="3"-->
-                <!--android:layout_row="1"-->
-                <!--tools:text="Fri - 12:00" />-->
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_column="3"-->
+        <!--android:layout_row="1"-->
+        <!--tools:text="Fri - 12:00" />-->
 
 
         <!--</GridLayout>-->
 
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#0ccc" />
+        <include layout="@layout/list_divider"/>
 
     </LinearLayout>
 </layout>
