--- a/app/src/main/res/layout/row_series_selection.xml
+++ b/app/src/main/res/layout/row_series_selection.xml
@@ -1,23 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="data"
-            type="com.pedrojtmartins.racingcalendar.models.Series"/>
+            type="com.pedrojtmartins.racingcalendar.models.Series" />
     </data>
 
 
-    <CheckBox
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:checked="@={data.favorite}"
-        android:ellipsize="marquee"
-        android:gravity="center_vertical"
-        android:lines="1"
-        android:padding="16dp"
-        android:text="@{data.name}"
-        android:textSize="16sp"/>
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#f2f2f2"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="16dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="16dp"
+                android:layout_weight="1"
+                android:ellipsize="marquee"
+                android:gravity="center_vertical"
+                android:lines="1"
+                android:text="@{data.name}"
+                android:textColor="#000"
+                android:textSize="16sp" />
+
+            <android.support.v7.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:tint="@{data.favorite ? @color/tintEnabled : @color/tintDisabled}"
+                app:srcCompat="@drawable/favourite_black" />
+
+
+        </LinearLayout>
+
+        <include layout="@layout/list_divider" />
+    </LinearLayout>
 </layout>
