--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
 
 
 
-    <color name="tintDisabled">#dfdfdf</color>
+    <color name="tintDisabled">#c6c6c6</color>
     <color name="tintEnabled">#000</color>
 
 
