--- a/app/src/main/res/layout/row_series_selection.xml
+++ b/app/src/main/res/layout/row_series_selection.xml
@@ -37,6 +37,7 @@
 
             <android.support.v7.widget.AppCompatImageView
                 android:layout_width="wrap_content"
+                android:id="@+id/favourites_imv"
                 android:layout_height="wrap_content"
                 android:tint="@{data.favorite ? @color/tintEnabled : @color/tintDisabled}"
                 app:srcCompat="@drawable/favourite_black" />
