--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -28,9 +28,9 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatImageView
-                android:layout_width="125dp"
-                android:layout_height="125dp"
-                app:srcCompat="@mipmap/ic_launcher" />
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:srcCompat="@mipmap/ic_launcher_about" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
