--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -27,6 +26,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -49,13 +49,21 @@
                         android:text="@{data.dateTime}"
                         android:textColor="@{data.toDelete ? @color/tintDisabled : @color/primary_text}" />
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginLeft="8dp"
+                        android:text="@{data.minutesBeforeString}"
+                        android:textColor="@{data.toDelete ? @color/tintDisabled : @color/primary_text}" />
+
                 </LinearLayout>
             </LinearLayout>
 
             <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/notification_imv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/notification_imv"
                 android:tint="@{data.toDelete ? @color/tintDisabled : @color/tintEnabled}"
                 app:srcCompat="@drawable/alarm_on_black" />
 
