--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="data"
             type="com.pedrojtmartins.racingcalendar.models.RCNotification" />
+
+        <import type="android.view.View" />
     </data>
 
     <LinearLayout
@@ -15,6 +18,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/notification_parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#f2f2f2"
@@ -25,8 +29,8 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="16dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -35,7 +39,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
                     android:text="@{data.seriesName}"
-                    android:textColor="@{data.toDelete ? @color/tintDisabled : @color/primary_text}" />
+                    android:textColor="@{data.toDelete ? @color/tintDisabled : @color/primary_text}"
+                    tools:text="Formula 1" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -47,15 +52,25 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{data.dateTime}"
-                        android:textColor="@{data.toDelete ? @color/tintDisabled : @color/primary_text}" />
+                        android:textColor="@{data.toDelete ? @color/tintDisabled : @color/primary_text}"
+                        tools:text="23 Jan  18:00" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
                         android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
                         android:text="@{data.minutesBeforeString}"
-                        android:textColor="@{data.toDelete ? @color/tintDisabled : @color/primary_text}" />
+                        android:textColor="@{data.toDelete ? @color/tintDisabled : @color/primary_text}"
+                        tools:text="(-15)" />
+
+                    <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/notification_edit_time_before"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:tint="@{data.toDelete ? @color/tintDisabled : @color/tintEnabled}"
+                        android:visibility="@{data.hasDataOnly() ? View.GONE : View.VISIBLE}"
+                        app:srcCompat="@drawable/edit_black" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -69,9 +84,6 @@
 
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="#0ccc" />
+        <include layout="@layout/list_divider"/>
     </LinearLayout>
 </layout>
