--- a/app/src/main/res/layout/row_race2.xml
+++ b/app/src/main/res/layout/row_race2.xml
@@ -115,7 +115,7 @@
                 </LinearLayout>
             </LinearLayout>
 
-                <!--android:background="#10000000"-->
+            <!--android:background="#10000000"-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -127,12 +127,20 @@
                 android:paddingRight="8dp"
                 android:paddingTop="3dp">
 
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/race_row_url"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:tint="#A0A0A0"
+                    app:srcCompat="@drawable/link_black" />
+
                 <View
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="1" />
 
                 <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/race_row_notification"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:tint="#A0A0A0"
