--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -26,10 +26,17 @@
             android:orientation="horizontal"
             android:padding="16dp">
 
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/notification_imv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:tint="@{data.toDelete ? @color/tintDisabled : @color/tintEnabled}"
+                app:srcCompat="@drawable/alarm_on_black" />
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
@@ -64,26 +71,20 @@
                         android:textColor="@{data.toDelete ? @color/tintDisabled : @color/primary_text}"
                         tools:text="(-15)" />
 
-                    <android.support.v7.widget.AppCompatImageView
-                        android:id="@+id/notification_edit_time_before"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:tint="@{data.toDelete ? @color/tintDisabled : @color/tintEnabled}"
-                        android:visibility="@{data.hasDataOnly() ? View.GONE : View.VISIBLE}"
-                        app:srcCompat="@drawable/edit_black" />
-
                 </LinearLayout>
             </LinearLayout>
 
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/notification_imv"
+                android:id="@+id/notification_edit_time_before"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tint="@{data.toDelete ? @color/tintDisabled : @color/tintEnabled}"
-                app:srcCompat="@drawable/alarm_on_black" />
+                android:clickable="@{data.toDelete || data.hasDataOnly() ? false : true}"
+                android:tint="@{data.toDelete || data.hasDataOnly() ? @color/tintDisabled : @color/tintEnabled}"
+                app:srcCompat="@drawable/edit_black" />
+            <!--android:visibility="@{data.hasDataOnly() ? View.GONE : View.VISIBLE}"-->
 
         </LinearLayout>
 
-        <include layout="@layout/list_divider"/>
+        <include layout="@layout/list_divider" />
     </LinearLayout>
 </layout>
