--- a/app/src/main/res/menu/row_race.xml
+++ b/app/src/main/res/menu/row_race.xml
@@ -12,4 +12,11 @@
         android:orderInCategory="1"
         android:title="@string/removeAlarm"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/three"
+        android:orderInCategory="1"
+        android:title="@string/openUrl"
+        app:showAsAction="never" />
+
 </menu>
