--- a/app/src/main/res/layout/row_series.xml
+++ b/app/src/main/res/layout/row_series.xml
@@ -21,6 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:tint="@color/arrowsTint"
+                android:visibility="@{data.hasUrl ? View.VISIBLE : View.GONE}"
                 app:srcCompat="@drawable/link_black" />
 
             <LinearLayout
