--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,12 +4,12 @@
     <data></data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="com.pedrojtmartins.racingcalendar.views.activities.AboutActivity">
+                  xmlns:app="http://schemas.android.com/apk/res-auto"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical"
+                  tools:context="com.pedrojtmartins.racingcalendar.views.activities.AboutActivity">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -31,13 +31,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:clickable="true"
                 android:gravity="center"
+                android:onClick="onClick_toStore"
                 android:orientation="vertical">
 
                 <android.support.v7.widget.AppCompatImageView
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    app:srcCompat="@mipmap/ic_launcher_about" />
+                    app:srcCompat="@mipmap/ic_launcher_about"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -48,14 +50,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="@string/app_name" />
+                        android:text="@string/app_name"/>
 
                     <TextView
                         android:id="@+id/about_version"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:gravity="center" />
+                        android:gravity="center"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -67,14 +69,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="@string/dataVersion" />
+                        android:text="@string/dataVersion"/>
 
                     <TextView
                         android:id="@+id/about_data_version"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-                        android:gravity="center" />
+                        android:gravity="center"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -90,12 +92,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/devName" />
+                    android:text="@string/devName"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/devEmail" />
+                    android:text="@string/devEmail"/>
             </LinearLayout>
 
         </LinearLayout>
