--- a/app/src/main/res/layout/row_race2.xml
+++ b/app/src/main/res/layout/row_race2.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="data"
-            type="com.pedrojtmartins.racingcalendar.models.Race" />
+            type="com.pedrojtmartins.racingcalendar.models.Race"/>
 
-        <import type="android.view.View" />
+        <import type="android.view.View"/>
+
+        <import type="com.pedrojtmartins.racingcalendar.adapters.recyclerViews.RaceAdapter.BindingAdapters"/>
     </data>
 
     <LinearLayout
@@ -19,171 +21,22 @@
 
         <TextView
             android:id="@+id/weekTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:visibility="gone" />
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#f2f2f2"
-            android:orientation="vertical">
+            android:paddingBottom="16dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="16dp"
+            android:textColor="#fff"
+            android:textSize="16sp"
+            android:visibility="gone"/>
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="#f2f2f2"
-                    android:orientation="vertical"
-                    android:padding="8dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="marquee"
-                        android:lines="1"
-                        android:text="@{data.seriesName}"
-                        android:textColor="#333"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        tools:text="F1 - Formula 1" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@{data.raceNumberString}"
-                            android:textColor="#333"
-                            android:textSize="14sp"
-                            tools:text="#13" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text=" - "
-                            android:textColor="#333"
-                            android:textSize="14sp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:ellipsize="marquee"
-                            android:lines="1"
-                            android:text="@{data.name}"
-                            android:textColor="#333"
-                            android:textSize="14sp"
-                            tools:text="Spanish GP" />
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="marquee"
-                        android:lines="1"
-                        android:text="@{data.location}"
-                        android:textColor="#333"
-                        android:textSize="14sp"
-                        tools:text="Circuit de Catalunya, Barcelona, Spain" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <android.support.v7.widget.AppCompatImageView
-                        android:id="@+id/race_row_more"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"
-                        android:clickable="true"
-                        android:padding="5dp"
-                        app:srcCompat="@drawable/more_vertical_black" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <!--android:background="#10000000"-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/gradient"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingBottom="3dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:paddingTop="3dp">
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/race_row_url"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:tint="#A0A0A0"
-                    app:srcCompat="@drawable/link_black" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/race_row_notification"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:tint="#A0A0A0"
-                    android:visibility="@{data.isAlarmSet ? View.VISIBLE : View.GONE}"
-                    app:srcCompat="@drawable/alarm_on_black" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:text="@{data.simplifiedDate}"
-                    android:textColor="#333"
-                    tools:text="26 Mar" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:text="@{data.dayOfWeekShort}"
-                    android:textColor="#333"
-                    android:textStyle="bold"
-                    tools:text="Sab" />
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:text="@{data.hour}"
-                    android:textColor="#333"
-                    android:textStyle="bold"
-                    android:visibility="@{data.hour.length() > 0 ? View.VISIBLE : View.GONE}"
-                    tools:text="2:00pm" />
-
-
-                <!--<android.support.v7.widget.AppCompatImageView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:clickable="true"-->
-                <!--android:rotation="90"-->
-                <!--android:tint="#555"-->
-                <!--app:srcCompat="@drawable/arrow_black" />-->
-            </LinearLayout>
+        <!--We need this framelayout to programmatically -->
+        <!--manipulate the foreground on lower apis-->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:foreground="@{data.eventDateStatus}">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -191,50 +44,212 @@
                 android:background="#f2f2f2"
                 android:orientation="vertical">
 
-                <!--<GridLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content">-->
-
-                <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="0"-->
-                <!--android:layout_row="0">-->
-
-                <!--<include layout="@layout/row_race_detail" />-->
-                <!--</LinearLayout>-->
-
-                <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_column="0"-->
-                <!--android:layout_row="1">-->
-
-                <!--<include layout="@layout/row_race_detail" />-->
-                <!--</LinearLayout>-->
-
-                <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content">-->
-
-                <!--<include layout="@layout/row_race_detail" />-->
-                <!--</LinearLayout>-->
-
-                <!--</GridLayout>-->
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#f2f2f2"
+                        android:orientation="vertical"
+                        android:padding="8dp">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="marquee"
+                            android:lines="1"
+                            android:text="@{data.seriesName}"
+                            android:textColor="#333"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            tools:text="F1 - Formula 1"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@{data.raceNumberString}"
+                                android:textColor="#333"
+                                android:textSize="14sp"
+                                tools:text="#13"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text=" - "
+                                android:textColor="#333"
+                                android:textSize="14sp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:ellipsize="marquee"
+                                android:lines="1"
+                                android:text="@{data.name}"
+                                android:textColor="#333"
+                                android:textSize="14sp"
+                                tools:text="Spanish GP"/>
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="marquee"
+                            android:lines="1"
+                            android:text="@{data.location}"
+                            android:textColor="#333"
+                            android:textSize="14sp"
+                            tools:text="Circuit de Catalunya, Barcelona, Spain"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <android.support.v7.widget.AppCompatImageView
+                            android:id="@+id/race_row_more"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp"
+                            android:clickable="true"
+                            android:padding="5dp"
+                            app:srcCompat="@drawable/more_vertical_black"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/gradient"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingBottom="3dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:paddingTop="3dp">
+
+                    <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/race_row_url"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:tint="#A0A0A0"
+                        app:srcCompat="@drawable/link_black"/>
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+
+                    <android.support.v7.widget.AppCompatImageView
+                        android:id="@+id/race_row_notification"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:tint="#A0A0A0"
+                        android:visibility="@{data.isAlarmSet ? View.VISIBLE : View.GONE}"
+                        app:srcCompat="@drawable/alarm_on_black"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:text="@{data.simplifiedDate}"
+                        android:textColor="#333"
+                        tools:text="26 Mar"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:text="@{data.dayOfWeekShort}"
+                        android:textColor="#333"
+                        android:textStyle="bold"
+                        tools:text="Sab"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:text="@{data.hour}"
+                        android:textColor="#333"
+                        android:textStyle="bold"
+                        android:visibility="@{data.hour.length() > 0 ? View.VISIBLE : View.GONE}"
+                        tools:text="2:00pm"/>
+
+
+                    <!--<android.support.v7.widget.AppCompatImageView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:clickable="true"-->
+                    <!--android:rotation="90"-->
+                    <!--android:tint="#555"-->
+                    <!--app:srcCompat="@drawable/arrow_black" />-->
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#f2f2f2"
+                    android:orientation="vertical">
+
+                    <!--<GridLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content">-->
+
+                    <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_column="0"-->
+                    <!--android:layout_row="0">-->
+
+                    <!--<include layout="@layout/row_race_detail" />-->
+                    <!--</LinearLayout>-->
+
+                    <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_column="0"-->
+                    <!--android:layout_row="1">-->
+
+                    <!--<include layout="@layout/row_race_detail" />-->
+                    <!--</LinearLayout>-->
+
+                    <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content">-->
+
+                    <!--<include layout="@layout/row_race_detail" />-->
+                    <!--</LinearLayout>-->
+
+                    <!--</GridLayout>-->
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
+        </FrameLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#0ccc" />
+            android:background="#0ccc"/>
     </LinearLayout>
+
 </layout>
