Add support for multiple races

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context="com.pedrojtmartins.racingcalendar.views.fragments.RaceListFragment"
-                tools:listitem="@layout/row_race"/>
+                tools:listitem="@layout/row_race2"/>
         </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 </layout>
