--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,9 +23,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="MyActionBar.MenuTextStyle" parent="style/TextAppearance.AppCompat">
         <item name="android:textColor">#000</item>
@@ -149,6 +149,7 @@
 
     <style name="RaceRowDateAlarm">
         <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_marginRight">4dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:tint">#A0A0A0</item>
     </style>
@@ -157,6 +158,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_gravity">right</item>
         <item name="android:orientation">horizontal</item>
     </style>
 
