--- a/app/src/main/res/layout/row_race2.xml
+++ b/app/src/main/res/layout/row_race2.xml
@@ -142,6 +142,16 @@
                     android:tint="#A0A0A0"
                     app:srcCompat="@drawable/link_black"/>
 
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/race_row_results"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    android:scaleX="-1"
+                    android:tint="#A0A0A0"
+                    app:srcCompat="@drawable/podium"/>
+
                 <View
                     android:layout_width="0dp"
                     android:layout_height="0dp"
