--- a/app/src/main/res/layout/row_series.xml
+++ b/app/src/main/res/layout/row_series.xml
@@ -31,11 +31,12 @@
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/results"
-                    android:layout_width="wrap_content"
+                    android:layout_width="wrap_content" android:layout_marginTop="5dp"
                     android:layout_height="wrap_content"
+                    android:scaleX="-1"
                     android:tint="@color/arrowsTint"
                     android:visibility="@{data.hasUrl ? View.VISIBLE : View.GONE}"
-                    app:srcCompat="@drawable/results"/>
+                    app:srcCompat="@drawable/podium"/>
             </LinearLayout>
 
             <LinearLayout
