--- a/app/src/main/res/menu/row_race.xml
+++ b/app/src/main/res/menu/row_race.xml
@@ -49,4 +49,10 @@
         android:title="@string/openUrl"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/openResults"
+        android:orderInCategory="5"
+        android:title="@string/openResults"
+        app:showAsAction="never"/>
+
 </menu>
